--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600&family=Rammetto+One&display=swap');
 
 * {
 	font-family: 'Poppins', sans-serif;
@@ -19,18 +19,24 @@ header {
 
 nav {
 	width: 100%;
-	display: flex;
-	justify-content: center;
+	/*display: flex;*/
+	/*justify-content: center;*/
 	position: fixed;
 	background-color: #f9f9f9;
+	z-index: 999;
+}
+
+.logo {
+	float: left;
 }
 
 ul {
-	width: 50%;
+	width: 80%;
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: center;
-	padding: 25px 0 25px 0;
+	padding: 18px 0 18px 0;
+	float: right;
 }
 
 li {
@@ -41,12 +47,14 @@ li {
 li a {
 	text-decoration: none;
 	color: #111;
+	opacity: 60%;
+	font-weight: 600;
 }
 
-.brand a {
+/*.brand a {
 	font-weight: 600;
 	font-size: 30px;
-}
+}*/
 
 /*content-----------------------------*/
 
@@ -114,12 +122,24 @@ footer {
 .hero {
 	width: 100%;
 	height: 80vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	background-image: url(img/bg.jpg);
 	background-size: cover;
 	background-position: center;
+	padding-top: 100px;
 }
 
-
+.hero h1 {
+	font-size: 120px;
+	color: #fff;
+	font-weight: 800;
+	opacity: 60%;
+	letter-spacing: -5px;
+	line-height: 110px;
+	font-family: 'Rammetto One', cursive;
+}
 
 
 
@@ -141,9 +161,9 @@ footer {
 		width: 100%;
 	}
 
-	li a {
+	/*li a {
 		display: none;
-	}
+	}*/
 
 	.brand a {
 		display: block;
