--- a/style.css
+++ b/style.css
@@ -12,15 +12,12 @@ body {
 	background-color: #f9f9f9;
 }
 
-header {
+/* header {
 	width: 100%;
-	/*height: 200vh;*/
 }
 
 nav {
 	width: 100%;
-	/*display: flex;*/
-	/*justify-content: center;*/
 	position: fixed;
 	background-color: #f9f9f9;
 	z-index: 999;
@@ -49,7 +46,7 @@ li a {
 	color: #111;
 	opacity: 60%;
 	font-weight: 600;
-}
+} */
 
 /*.brand a {
 	font-weight: 600;
@@ -332,6 +329,13 @@ footer {
 	iframe {
 		width: 100%;
 	}
+
+	.banner img {
+		width: 240px;
+		display: block;
+		margin: auto;
+		padding-top: 17px;
+	}
 }
 
 @media screen and (max-width: 500px) {
@@ -363,13 +367,6 @@ footer {
 
 	iframe {
 		width: 100%;
-	}
-
-	.banner img {
-		width: 240px;
-		display: block;
-		margin: auto;
-		padding-top: 17px;
 	}
 
 }
